--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
- "name": "vue-obj-install",
- "version": "1.0.0",
- "author": "Sebastian Kaźmierczak <moques93@gmail.com>",
- "license": "MIT",
- "description": "A simple function for install your script/variables/objects/functions/... into global Vue object.",
- "keywords": [
-  "vue",
-  "install"
- ],
- "repository": {
-  "type": "git",
-  "url": "https://github.com/MoQuEs/vue-obj-install.git"
- },
- "bugs": "https://github.com/MoQuEs/vue-obj-install/issues",
- "main": "dist/vue-obj-install.min.js",
- "scripts": {
-  "test": "echo \"There is currently no test case for this plugin\" && exit 1",
-  "build": "npm run _es2015 & npm run _minify",
-  "_es2015": "babel ./src/index.js  --presets es2015 --out-file ./dist/vue-obj-install.es5.js",
-  "_minify": "babel ./src/index.js  --presets minify --out-file ./dist/vue-obj-install.min.js"
- },
- "peerDependencies": {
-  "vue": ">= 2.0.0"
- },
- "devDependencies": {
-  "babel-cli": "^6.26.0",
-  "babel-core": "^6.26.3",
-  "babel-preset-es2015": "^6.24.1",
-  "babel-preset-minify": "^0.4.3"
- }
+  "name": "vue-obj-install",
+  "version": "1.0.0",
+  "author": "Sebastian Kaźmierczak <moques93@gmail.com>",
+  "license": "MIT",
+  "description": "A simple function for install your script/variables/objects/functions/... into global Vue object.",
+  "keywords": [
+    "vue",
+    "install"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MoQuEs/vue-obj-install.git"
+  },
+  "bugs": "https://github.com/MoQuEs/vue-obj-install/issues",
+  "main": "dist/vue-obj-install.min.js",
+  "scripts": {
+    "test": "echo \"There is currently no test case for this plugin\" && exit 1",
+    "build": "run-p _es2015 _es2015_minify _minify",
+    "_es2015": "babel ./src/index.js --presets @babel/preset-env --out-file ./dist/vue-obj-install.es5.js",
+    "_es2015_minify": "babel ./src/index.js --presets @babel/preset-env --presets minify --out-file ./dist/vue-obj-install.es5.min.js",
+    "_minify": "babel ./src/index.js --presets minify --out-file ./dist/vue-obj-install.min.js"
+  },
+  "peerDependencies": {
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-preset-minify": "^0.5.0",
+    "npm-run-all": "^4.1.5"
+  }
 }
